# MPh

./: .gitignore  .readthedocs.yaml  PyPI.md  ReadMe.md  contributors.md  license.txt  pypi.md  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  maintenance_task.md
.github/workflows/: check_commit.yml  publish_release.yml
demos/: ReadMe.md  compact_models.py  create_capacitor.py  worker_pool.py
deploy/: build.py  clean.py  codecov.py  coverage.py  docs.py  notes.txt  publish.py  release.md  render.py  test.py
docs/: ReadMe.md  api.md  capacitor.mph  conf.py  credits.md  demonstrations.md  index.md  installation.md  limitations.md  releases.md  requirements.txt  tutorial.md
docs/api/: mph.Client.md  mph.Client.rst  mph.Model.md  mph.Model.rst  mph.Node.md  mph.Node.rst  mph.Server.md  mph.Server.rst  mph.backend.rst  mph.config.md  mph.config.rst  mph.discovery.md  mph.discovery.rst  mph.inspect.md  mph.inspect.rst  mph.java.rst  mph.start.md  mph.start.rst  mph.tools.rst  mph.tree.md  mph.tree.rst
docs/extensions/: myst_docstring.py  myst_summary.py
docs/style/: custom.css
docs/templates/sidebar/: brand.html
mph/: __init__.py  backend.py  client.py  config.py  discovery.py  java.py  meta.py  model.py  node.py  server.py  session.py  tags.json  tools.py
sandbox/: blank.mph  demo_create.py  harvest_tags.py  list_datatypes.py  list_groups.py  node.py  resolve.txt  test_Linux.py  test_abort.py  test_client.py  test_create.py  test_node.py  test_rewrite.py  test_shutdown.py  test_typecast.py
tests/: ReadMe.md  capacitor.mph  demo.mph  exit_client_exc.py  exit_client_sys.py  exit_exc.py  exit_nojvm_exc.py  exit_nojvm_sys.py  exit_sys.py  fixtures.py  load.tif  models.py  parent.py  run_all.py  table.txt  test_backend.py  test_client-server.py  test_client.py  test_config.py  test_discovery.py  test_exit.py  test_meta.py  test_model.py  test_multi.py  test_node.py  test_processes.py  test_remote.py  test_server.py  test_session.py  test_stand-alone.py  test_standalone.py  test_typecast.py
tools/: ReadMe.md  build.py  build_wheel.py  check_types.py  clean.py  codecov.py  coverage.py  docs.py  lint.py  lint_code.py  measure_coverage.py  publish.py  release.md  render_docs.py  report_coverage.py  run_tests.py  test.py  types.py  wheel.py
