# Project information: PyPI and Pip

[project]
name = 'MPh'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = [
    'Comsol',
    'multiphysics',
    'physics',
    'finite elements',
    'computer simulation',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Scientific/Engineering :: Physics',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
readme = 'PyPI.md'
dynamic = ['version', 'description']
requires-python = '>= 3.6'
dependencies = [
    'JPype1',
    'NumPy',
]

[project.optional-dependencies]
dev = [
    'Sphinx >= 6.1',
    'Furo',
    'MyST-parser >= 1.0',
    'pyTest',
    'pyTest-cov',
    'Flake8-pyproject',
    'Flit',
]

[project.urls]
Documentation = 'https://mph.readthedocs.io'
Source = 'https://github.com/MPh-py/MPh'


# Wheel builder: Flit

[build-system]
requires = ['flit_core >= 3.4, < 4']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'mph'


# Code linter: Flake8

[tool.flake8]
exclude = [
    'local',  '.local',
    'ignore', '.ignore',
    'venv',   '.venv',
]
ignore = [
    'E127',                  # Continuation line over-indented.
    'E128',                  # Continuation line under-indented.
    'E201',                  # Whitespace after '('.
    'E202',                  # Whitespace before ')'.
    'E221',                  # Multiple spaces before operator.
    'E222',                  # Multiple spaces after operator.
    'E226',                  # Missing whitespace around arithmetic operator.
    'E231',                  # Missing whitespace after ',', ';', or ':'.
    'E241',                  # Multiple spaces after ','.
    'E251',                  # Unexpected spaces around keyword equals.
    'E261',                  # At least two spaces before inline comment.
    'E271',                  # Multiple spaces after keyword.
    'E272',                  # Multiple spaces before keyword.
    'E402',                  # Module level import not at top of file.
    'W503',                  # Line break occurred before a binary operator.
]
per-file-ignores = [
    '__init__.py:F401',      # Imported but unused.
]


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['mph/']
omit = ['mph/discovery.py']  # Ignore platform-dependent discovery mechanism.
relative_files = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def location',          # Ignore platform-dependent configuration search.
]
